# ghas-auto-triage

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  alert_to_issue.yaml.example  ghas_llm.yaml.example  human_baseline.example.json  pyproject.toml
.github/workflows/: triage.yml
docs/: ARCHITECTURE.md  RELATIONSHIP.md
docs/diagrams/: comment-lifecycle.mmd  how-it-works.mmd  mermaid-config.json  pipeline-overview.mmd  render.sh
scripts/: persist_memory_git.sh  setup_org_ssh.sh
src/ghas_llm/: __main__.py  agent.py  agentic_triage.py  auto_resolve.py  cli.py  config.py  context_builder.py  context_github_api.py  dedup.py  exposure_scanner.py  github_api.py  jira_ghas_cycle.py  jira_triage.py  llm_triage.py  local_dry_run.py  models.py
src/ghas_llm/agents/: __init__.py  advisory_agent.py  comment_scanner_agent.py  critic_agent.py  evidence_agent.py  human_feedback_agent.py  knowledge_agent.py  org_hunter_agent.py  prosecutor_agent.py
src/ghas_llm/core/: __init__.py  orchestrator.py  preflight.py
src/ghas_llm/integrations/: __init__.py  github_alert_comments.py  jira_integration.py  mapping.py  memory_store.py  slack_notify.py  status_updates.py
src/ghas_llm/logic/: __init__.py  consistency_gate.py  global_memory.py  human_comment.py  judge_prompt.py  syllogism.py
tests/: test_agent.py  test_agentic_triage.py  test_auto_resolve.py  test_cli_extensions.py  test_comment_scanner.py  test_config.py  test_context_builder.py  test_critic_agent.py  test_dedup.py  test_exposure_scanner.py  test_force_verdict.py  test_github_api.py  test_global_memory.py  test_human_comment.py  test_human_feedback.py  test_jira_ghas_cycle.py  test_jira_triage.py  test_llm_triage.py  test_local_dry_run.py  test_marker_routing.py  test_memory_store.py  test_models.py  test_org_hunter_agent.py  test_persist_memory_git.py  test_preflight_truth_table.py  test_prosecutor_agent.py  test_slack_notify.py  test_syllogism.py
tests/fixtures/: sample_dependabot_alert.json
